improve check script

--- a/bio-list.tex
+++ b/bio-list.tex
@@ -1,6 +1,6 @@
 \part{Technologioes}
 \chapter{New Technologies}
-\input{../hid-sp18-405/technology/abstract-linkedinwherehows.tex}
+\input{../hid-sp18-405/technology/abstract-linkedinwherehows}
 
 \begin{IU}
 
@@ -8,9 +8,15 @@ hid-sp18-405
 
 \href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-linkedinwherehows.tex}{abstract-linkedinwherehows.tex}
 
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: 
+\end{verbatim}
+\end{tiny}
 \end{IU}
 
-\input{../hid-sp18-405/technology/abstract-lumify.tex}
+\input{../hid-sp18-405/technology/abstract-lumify}
 
 \begin{IU}
 
@@ -18,9 +24,15 @@ hid-sp18-405
 
 \href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-lumify.tex}{abstract-lumify.tex}
 
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: 
+\end{verbatim}
+\end{tiny}
 \end{IU}
 
-\input{../hid-sp18-405/technology/abstract-nifi.tex}
+\input{../hid-sp18-405/technology/abstract-nifi}
 
 \begin{IU}
 
@@ -28,9 +40,15 @@ hid-sp18-405
 
 \href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-nifi.tex}{abstract-nifi.tex}
 
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: 
+\end{verbatim}
+\end{tiny}
 \end{IU}
 
-\input{../hid-sp18-405/technology/abstract-samoa.tex}
+\input{../hid-sp18-405/technology/abstract-samoa}
 
 \begin{IU}
 
@@ -38,9 +56,15 @@ hid-sp18-405
 
 \href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-samoa.tex}{abstract-samoa.tex}
 
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: 
+\end{verbatim}
+\end{tiny}
 \end{IU}
 
-\input{../hid-sp18-405/technology/abstract-stardog.tex}
+\input{../hid-sp18-405/technology/abstract-stardog}
 
 \begin{IU}
 
@@ -48,9 +72,266 @@ hid-sp18-405
 
 \href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-stardog.tex}{abstract-stardog.tex}
 
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: 
+\end{verbatim}
+\end{tiny}
 \end{IU}
 
-\input{../hid-sp18-521/technology/abstract-athena.tex}
+\input{../hid-sp18-503/technology/abstract-carbondata}
+
+\begin{IU}
+
+hid-sp18-503
+
+\href{https://github.com/cloudmesh-community/hid-sp18-503/blob/master//technology/abstract-carbondata.tex}{abstract-carbondata.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: "../hid-sp18-503/technology/abstract-carbondata.tex", line 14: missing `\@'
+before `.' in "HDFS."
+chktex: Warning 13 in ../hid-sp18-503/technology/abstract-carbondata.tex line 14:
+Intersentence spacing (`\@') should perhaps be used. and stores information like
+schema, in the header and footer co-located in HDFS.
+^ Warning 2 in ../hid-sp18-503/technology/abstract-carbondata.tex line 16: Non-
+breaking space (`~') should have been used. optimize queries \cite{hid-
+sp18-503-carbondata-docs}.                   ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-503/technology/abstract-edgent}
+
+\begin{IU}
+
+hid-sp18-503
+
+\href{https://github.com/cloudmesh-community/hid-sp18-503/blob/master//technology/abstract-edgent.tex}{abstract-edgent.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 36 in ../hid-sp18-503/technology/abstract-edgent.tex line 6: You should
+put a space in front of parenthesis. Many of the devices that form the internet
+of things(IoT) are sensors,
+^ Warning 2 in ../hid-sp18-503/technology/abstract-edgent.tex line 23: Non-
+breaking space (`~') should have been used. and allows custom message hubs as
+well \cite{hid-sp18-503-edgent-docs}.                                         ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-513/technology/abstract-datameer}
+
+\begin{IU}
+
+hid-sp18-513
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-datameer.tex}{abstract-datameer.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-513/technology/abstract-datameer.tex line 2: Non-
+breaking space (`~') should have been used. Datameer is self service, schema
+free Big Data Analytics tool which provides end to end analytics. Datameer is
+used in cleansing the data that was ingested or as it is being ingested, and
+then it has the ability to query the data using Hive/Spark and provide
+visualization for the queried data. Datameer scales up to thousands of nodes and
+is available for all major Hadoop distributions \cite{datameer}. Datameer
+specializes in analysis of large volumes of data. Datameer provides end to end
+solution from data extraction, profiling, cleansing, transforming, merging,
+securing and finally visualization.
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-513/technology/abstract-docker}
+
+\begin{IU}
+
+hid-sp18-513
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-docker.tex}{abstract-docker.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-513/technology/abstract-docker.tex line 2: Non-breaking
+space (`~') should have been used. Docker is an open platform for developers and
+sysadmins to build, ship, and run distributed applications, whether on laptops,
+data center VMs, or the cloud \cite{docker}. It is designed to make it easier to
+create, deploy, and run applications by using containers. Containers allow a
+developer to package up an application with all of the parts it needs, such as
+libraries and other dependencies, and ship it all out as one package. Docker is
+like a virtual machine but it does not require to create a whole virtual
+operating system, Docker allows applications to use the same Linux kernel as the
+system that they're running on and only requires applications be shipped with
+things not already running on the host computer. This gives a significant
+performance boost and reduces the size of the application \cite{opensource}.
+^ Warning 2 in ../hid-sp18-513/technology/abstract-docker.tex line 2: Non-
+breaking space (`~') should have been used. Docker is an open platform for
+developers and sysadmins to build, ship, and run distributed applications,
+whether on laptops, data center VMs, or the cloud \cite{docker}. It is designed
+to make it easier to create, deploy, and run applications by using containers.
+Containers allow a developer to package up an application with all of the parts
+it needs, such as libraries and other dependencies, and ship it all out as one
+package. Docker is like a virtual machine but it does not require to create a
+whole virtual operating system, Docker allows applications to use the same Linux
+kernel as the system that they're running on and only requires applications be
+shipped with things not already running on the host computer. This gives a
+significant performance boost and reduces the size of the application
+\cite{opensource}.
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-513/technology/abstract-neo4j}
+
+\begin{IU}
+
+hid-sp18-513
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-neo4j.tex}{abstract-neo4j.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-513/technology/abstract-neo4j.tex line 2: Non-breaking
+space (`~') should have been used. Neo4j is a graph database developed by Neo4j,
+Inc. It is an ACID-compliant transactional  database with graph storage and
+processing which in turn help data scientists to gain new perspectives on data.
+Neo4j’s Graph Platform is specifically optimized to map, analyze, store and
+traverse networks of connected data to reveal invisible contexts and hidden
+relationships to help enterprises tackle challenges such as Artificial
+Intelligence and Machine Learning, Fraud Detection, Master Data Management
+\cite{neo4j}.
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-513/technology/abstract-oozie}
+
+\begin{IU}
+
+hid-sp18-513
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-oozie.tex}{abstract-oozie.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-513/technology/abstract-oozie.tex line 2: Non-breaking
+space (`~') should have been used. Apache Oozie is a workflow scheduler to
+manage Hadoop jobs. Workflows are defined as a collection of control flow and
+action nodes in a directed acyclic graph. Oozie  jobs can either be triggered
+based on the frequency or based on when the data becomes available. Oozie is
+integrated with the Hadoop stack supporting several types of Hadoop jobs such as
+map-reduce, Pig, Hive, Sqoop, Java programs and shell scripts. Oozie is a
+scalable, reliable and extensible system \cite{oozie}.
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-513/technology/abstract-tableau}
+
+\begin{IU}
+
+hid-sp18-513
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-tableau.tex}{abstract-tableau.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-513/technology/abstract-tableau.tex line 2: Non-
+breaking space (`~') should have been used. Tableau is the data visualization
+software that helps people to see and understand the data. Tableau can connect
+to almost any database, drag and drop to create visualizations, and share with a
+click. We can either schedule to get data refreshed or have real time updates
+with live connection.  We can explore data from any sources from spreadsheets to
+databases to Hadoop to cloud services in minutes and  dashboard can be published
+live on the web and on mobile devices \cite{tableau}.
+^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-516/technology/abstract-mariadb}
+
+\begin{IU}
+
+hid-sp18-516
+
+\href{https://github.com/cloudmesh-community/hid-sp18-516/blob/master//technology/abstract-mariadb.tex}{abstract-mariadb.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: "../hid-sp18-516/technology/abstract-mariadb.tex", line 5: missing `\@' before
+`.' in "SQL."
+chktex: Warning 13 in ../hid-sp18-516/technology/abstract-mariadb.tex line 5:
+Intersentence spacing (`\@') should perhaps be used. MySQL. Michael "Monty"
+Widenius is the lead developer of MariaDB and        ^ Warning 18 in ../hid-
+sp18-516/technology/abstract-mariadb.tex line 5: Use either `` or '' as an
+alternative to `"'. MySQL. Michael "Monty" Widenius is the lead developer of
+MariaDB and                  ^ Warning 18 in ../hid-
+sp18-516/technology/abstract-mariadb.tex line 5: Use either `` or '' as an
+alternative to `"'. MySQL. Michael "Monty" Widenius is the lead developer of
+MariaDB and                        ^ Warning 2 in ../hid-
+sp18-516/technology/abstract-mariadb.tex line 6: Non-breaking space (`~') should
+have been used. also the founder of MySQL AB \cite{wiki-MariaDB}. It supports a
+broad                               ^ Warning 2 in ../hid-
+sp18-516/technology/abstract-mariadb.tex line 9: Non-breaking space (`~') should
+have been used. scalable \cite{mariadb-server}. “It includes XtraDB storage
+engine for           ^ Warning 2 in ../hid-sp18-516/technology/abstract-
+mariadb.tex line 15: Non-breaking space (`~') should have been used. wide
+variety of use cases” \cite{www-mariadb-org}. It is used to turn
+^ Warning 2 in ../hid-sp18-516/technology/abstract-mariadb.tex line 18: Non-
+breaking space (`~') should have been used. support GIS and JSON format
+\cite{www-mariabdb-org}. “MariaDB is                              ^ Warning 2 in
+../hid-sp18-516/technology/abstract-mariadb.tex line 20: Non-breaking space
+(`~') should have been used. world’s leading brands” \cite{about-mariadb}. It is
+used to support                              ^ Warning 2 in ../hid-
+sp18-516/technology/abstract-mariadb.tex line 21: Non-breaking space (`~')
+should have been used. enterprise needs from OLTP to analytics \cite{about-
+mariadb}.                                          ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-516/technology/abstract-tokudb}
+
+\begin{IU}
+
+hid-sp18-516
+
+\href{https://github.com/cloudmesh-community/hid-sp18-516/blob/master//technology/abstract-tokudb.tex}{abstract-tokudb.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 13 in ../hid-sp18-516/technology/abstract-tokudb.tex line 3:
+Intersentence spacing (`\@') should perhaps be used. IMPROVE: WE DO NOT DO URLS
+in TECHNOLOGIES          ^ Warning 2 in ../hid-sp18-516/technology/abstract-
+tokudb.tex line 16: Non-breaking space (`~') should have been used. server
+\cite{www-wikipedia}. It “reduces the deployment costs associated with
+^ Warning 2 in ../hid-sp18-516/technology/abstract-tokudb.tex line 18: Non-
+breaking space (`~') should have been used. requirements of big data
+applications” \cite{www-percona}. It “provides indexing-
+^ Warning 2 in ../hid-sp18-516/technology/abstract-tokudb.tex line 20: Non-
+breaking space (`~') should have been used. memory” \cite{www-wikipedia}.
+“Because of its exceptional indexing performance,             ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-521/technology/abstract-athena}
 
 \begin{IU}
 
@@ -58,6 +339,98 @@ hid-sp18-521
 
 \href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}{abstract-athena.tex}
 
+\begin{tiny}
+\begin{verbatim}
+lacheck: "../hid-sp18-521/technology/abstract-athena.tex", line 6: missing `\@' before
+`.' in "SQL."
+chktex: Warning 2 in ../hid-sp18-521/technology/abstract-athena.tex line 5: Non-breaking
+space (`~') should have been used. Amazon Athena \cite{hid-sp18-521-athena-faq}
+allows you to analyze data                ^ Warning 13 in ../hid-
+sp18-521/technology/abstract-athena.tex line 6: Intersentence spacing (`\@')
+should perhaps be used. stored in Amazon S3 using SQL. It was created with the
+purpose of                                ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-521/technology/abstract-emr}
+
+\begin{IU}
+
+hid-sp18-521
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-emr.tex}{abstract-emr.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: "../hid-sp18-521/technology/abstract-emr.tex", line 11: missing `\@' before `.'
+in "DB."
+chktex: Warning 2 in ../hid-sp18-521/technology/abstract-emr.tex line 5: Non-breaking
+space (`~') should have been used. Amazon EMR \cite{hid-sp18-521-AmazonEMR} is a
+managed Hadoop framework              ^ Warning 13 in ../hid-
+sp18-521/technology/abstract-emr.tex line 11: Intersentence spacing (`\@')
+should perhaps be used. stores like S3 and DynamoDB. Using EMR allows a user to
+setup and provision                               ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-521/technology/abstract-fission}
+
+\begin{IU}
+
+hid-sp18-521
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-fission.tex}{abstract-fission.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: "../hid-sp18-521/technology/abstract-fission.tex", line 10: missing `\@' before
+`.' in "CLI."
+chktex: Warning 2 in ../hid-sp18-521/technology/abstract-fission.tex line 4: Non-
+breaking space (`~') should have been used. Fission \cite{hid-
+sp18-521-FissionBlog} is a serverless framework for          ^ Warning 13 in
+../hid-sp18-521/technology/abstract-fission.tex line 10: Intersentence spacing
+(`\@') should perhaps be used. a variety of languages and then add them with a
+CLI. You can then                                                       ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-521/technology/abstract-greengrass}
+
+\begin{IU}
+
+hid-sp18-521
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-greengrass.tex}{abstract-greengrass.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-521/technology/abstract-greengrass.tex line 5: Non-
+breaking space (`~') should have been used. AWS Greengrass \cite{hid-
+sp18-521-Greengrass} lets the user run local compute,                  ^
+\end{verbatim}
+\end{tiny}
+\end{IU}
+
+\input{../hid-sp18-521/technology/abstract-sagemaker}
+
+\begin{IU}
+
+hid-sp18-521
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-sagemaker.tex}{abstract-sagemaker.tex}
+
+\begin{tiny}
+\begin{verbatim}
+lacheck: 
+chktex: Warning 2 in ../hid-sp18-521/technology/abstract-sagemaker.tex line 5: Non-
+breaking space (`~') should have been used. Amazon SageMaker \cite{hid-
+sp18-521-Sagemaker} was created to allow users                    ^
+\end{verbatim}
+\end{tiny}
 \end{IU}
 
 \part{Biographies}
@@ -150,6 +523,27 @@ hid-sp18-403
 \url{https://github.com/cloudmesh-community/hid-sp18-403/issue}
 
 \end{IU}
+\input{../hid-sp18-405/bio-Chen-Min.tex}
+
+\begin{IU}
+
+hid-sp18-405
+
+\url{https://github.com/cloudmesh-community/hid-sp18-405}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-405/issue}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-nifi.tex}{abstract-nifi.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-lumify.tex}{abstract-lumify.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-stardog.tex}{abstract-stardog.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-samoa.tex}{abstract-samoa.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-405/blob/master//technology/abstract-linkedinwherehows.tex}{abstract-linkedinwherehows.tex}
+
+\end{IU}
 \input{../hid-sp18-406/bio-dg-ramyashree.tex}
 
 \begin{IU}
@@ -159,6 +553,28 @@ hid-sp18-406
 \url{https://github.com/cloudmesh-community/hid-sp18-406}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-406/issue}
+
+\end{IU}
+\input{../hid-sp18-407/bio-hickman-keith.tex}
+
+\begin{IU}
+
+hid-sp18-407
+
+\url{https://github.com/cloudmesh-community/hid-sp18-407}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-407/issue}
+
+\end{IU}
+\input{../hid-sp18-408/bio-Joshi-Manoj.tex}
+
+\begin{IU}
+
+hid-sp18-408
+
+\url{https://github.com/cloudmesh-community/hid-sp18-408}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-408/issue}
 
 \end{IU}
 \input{../hid-sp18-409/bio-kadupitige-kadupitiya.tex}
@@ -292,6 +708,10 @@ hid-sp18-503
 
 \url{https://github.com/cloudmesh-community/hid-sp18-503/issue}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-503/blob/master//technology/abstract-edgent.tex}{abstract-edgent.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-503/blob/master//technology/abstract-carbondata.tex}{abstract-carbondata.tex}
+
 \end{IU}
 \input{../hid-sp18-504/bio-moeen-arshad.tex}
 
@@ -304,7 +724,7 @@ hid-sp18-504
 \url{https://github.com/cloudmesh-community/hid-sp18-504/issue}
 
 \end{IU}
-\input{../hid-sp18-505/bio-averill-cate.tex}
+\input{../hid-sp18-505/bio-cate-averill.tex}
 
 \begin{IU}
 
@@ -313,6 +733,18 @@ hid-sp18-505
 \url{https://github.com/cloudmesh-community/hid-sp18-505}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-505/issue}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-netflix.tex}{abstract-netflix.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-esri-data-services.tex}{abstract-esri-data-services.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-github-developer.tex}{abstract-github-developer.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-united-states-consumer-financial-protection-bureau.tex}{abstract-united-states-consumer-financial-protection-bureau.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-world-bank-open-data.tex}{abstract-world-bank-open-data.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-505/blob/master//technology/abstract-mapbox.tex}{abstract-mapbox.tex}
 
 \end{IU}
 \input{../hid-sp18-506/bio-esteban-orly.tex}
@@ -348,6 +780,17 @@ hid-sp18-508
 \url{https://github.com/cloudmesh-community/hid-sp18-508/issue}
 
 \end{IU}
+\input{../hid-sp18-510/bio-kaul-naveen.tex}
+
+\begin{IU}
+
+hid-sp18-510
+
+\url{https://github.com/cloudmesh-community/hid-sp18-510}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-510/issue}
+
+\end{IU}
 \input{../hid-sp18-511/bio-Khandelwal-Sandeep.tex}
 
 \begin{IU}
@@ -380,6 +823,16 @@ hid-sp18-513
 
 \url{https://github.com/cloudmesh-community/hid-sp18-513/issue}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-docker.tex}{abstract-docker.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-datameer.tex}{abstract-datameer.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-tableau.tex}{abstract-tableau.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-neo4j.tex}{abstract-neo4j.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-513/blob/master//technology/abstract-oozie.tex}{abstract-oozie.tex}
+
 \end{IU}
 \input{../hid-sp18-514/bio-lambadi-ravinder.tex}
 
@@ -401,6 +854,21 @@ hid-sp18-515
 \url{https://github.com/cloudmesh-community/hid-sp18-515}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-515/issue}
+
+\end{IU}
+\input{../hid-sp18-516/bio-pathan-shagufta.tex}
+
+\begin{IU}
+
+hid-sp18-516
+
+\url{https://github.com/cloudmesh-community/hid-sp18-516}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-516/issue}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-516/blob/master//technology/abstract-mariadb.tex}{abstract-mariadb.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-516/blob/master//technology/abstract-tokudb.tex}{abstract-tokudb.tex}
 
 \end{IU}
 \input{../hid-sp18-517/bio-pitkar-harshad.tex}
@@ -459,6 +927,14 @@ hid-sp18-521
 
 \href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-athena.tex}{abstract-athena.tex}
 
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-greengrass.tex}{abstract-greengrass.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-sagemaker.tex}{abstract-sagemaker.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-fission.tex}{abstract-fission.tex}
+
+\href{https://github.com/cloudmesh-community/hid-sp18-521/blob/master//technology/abstract-emr.tex}{abstract-emr.tex}
+
 \end{IU}
 \input{../hid-sp18-523/bio-tandon-ritesh.tex}
 
@@ -482,7 +958,7 @@ hid-sp18-524
 \url{https://github.com/cloudmesh-community/hid-sp18-524/issue}
 
 \end{IU}
-\input{../hid-sp18-525/bio-bruce-walker.tex}
+\input{../hid-sp18-525/bio-walker-bruce.tex}
 
 \begin{IU}
 
@@ -491,6 +967,17 @@ hid-sp18-525
 \url{https://github.com/cloudmesh-community/hid-sp18-525}
 
 \url{https://github.com/cloudmesh-community/hid-sp18-525/issue}
+
+\end{IU}
+\input{../hid-sp18-526/bio-whitson-timothy.tex}
+
+\begin{IU}
+
+hid-sp18-526
+
+\url{https://github.com/cloudmesh-community/hid-sp18-526}
+
+\url{https://github.com/cloudmesh-community/hid-sp18-526/issue}
 
 \end{IU}
 \input{../hid-sp18-601/bio-gianlupi-juliano.tex}
